--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,8 @@ buildscript {
         ]
 
         release = [
-                versionName: "2.0.4",   ///v2.0.4
-                versionCode: 20004
+                versionName: "2.0.5",   ///v2.0.5
+                versionCode: 20005
         ]
     }
 
@@ -20,7 +20,7 @@ buildscript {
     }
 
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.2"
+        classpath 'com.android.tools.build:gradle:4.2.1'
 
         ///[jitpack#publish]https://jitpack.io/docs/ANDROID/
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
